test/files/neg/nowarnMacros.check
Test_2.scala:10: warning: a pure expression does nothing in statement position; multiline expressions might require enclosing parentheses
    1 // warn
    ^
Test_2.scala:19: warning: a pure expression does nothing in statement position; multiline expressions might require enclosing parentheses
    1 // warn
    ^
Test_2.scala:28: warning: a pure expression does nothing in statement position; multiline expressions might require enclosing parentheses
    1 // warn
    ^
3 warnings
error: No warnings can be incurred under -Werror.
